<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">CRYPTONITE</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="get_hash">Hash Algorithms</string>
    <string name="steganography">Steganography</string>
    <string name="digital_signature">Digital Signature</string>
    <string name="aes" translatable="false">AES</string>
    <string name="des" translatable="false">DES</string>
    <string name="rsa" translatable="false">RSA</string>
    <string name="blowfish" translatable="false">Blowfish</string>
    <string name="twofish" translatable="false">Twofish</string>
    <string name="des3" translatable="false">3DES</string>
    <string name="GOST_28147_89" tools:ignore="TypographyDashes">GOST-28147-89</string>
    <string name="rc4" translatable="false">RC4</string>
    <string name="select_file_to_encrypt">Select file to encrypt</string>
    <string name="select_file">Select file</string>
    <string name="choose_aes_key_size">Choose AES key size</string>
    <string name="aes_128" translatable="false">AES-128</string>
    <string name="aes_192" translatable="false">AES-192</string>
    <string name="aes_256" translatable="false">AES-256</string>
    <string name="choose_key_generation_mode">Choose key generation mode</string>
    <string name="enter_pwd">Enter password</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="choose_hash">Choose hash algorithm</string>
    <string name="choose_algorithm">Choose Algorithm</string>
    <string name="choose_hash_algorithm">Choose Hash Algorithm</string>
    <string name="sha512" translatable="false">SHA512</string>
    <string name="sha256" translatable="false">SHA256</string>
    <string name="sha1" translatable="false">SHA1</string>
    <string name="md5" translatable="false">MD5</string>
    <string name="whirlpool" translatable="false">Whirlpool</string>
    <string name="ripemd160" translatable="false">RIPEMD160</string>
    <string name="keccak512" translatable="false">Keccak512</string>
    <string name="keccak384" translatable="false">Keccak384</string>
    <string name="keccak256" translatable="false">Keccak256</string>
    <string name="keccak224" translatable="false">Keccak224</string>
    <string name="blake512" translatable="false">Blake512</string>
    <string name="blake384" translatable="false">Blake384</string>
    <string name="blake256" translatable="false">Blake256</string>
    <string name="blake224" translatable="false">Blake224</string>
    <string name="blake160" translatable="false">Blake160</string>
    <string name="blake128" translatable="false">Blake128</string>
    <string name="sha384" translatable="false">SHA384</string>
    <string name="sha224" translatable="false">SHA224</string>
    <string name="gost3411">GOST-34.11</string>
    <string name="select_file_to_decrypt">Select file to decrypt</string>
    <string name="type_text_to_hash">Type text to hash</string>
    <string name="result_hash_algorithm">Result (%1$s)</string>
    <string name="hash">Hash</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="hash_of_file">Hash of a file</string>
    <string name="hash_user_input">Hash user input</string>
    <string name="permission_granted">Permission granted</string>
    <string name="standard_rsa_key_size" translatable="false">2048</string>
    <string name="choose_rsa_key_size">Choose RSA key size</string>
    <string name="generate_key_pair">Generate key pair</string>
    <string name="or_select_public_key_file">or\n\nSelect public key file</string>
    <string name="select_key_file">Select key file</string>
    <string name="select_private_key_file">Select private key file</string>
    <string name="choose_file_to_hash">Choose file to hash</string>
    <string name="choose_file">Choose file</string>
    <string name="file_encrypted">File encrypted</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="encryption_error">Encryption error</string>
    <string name="decryption_error">Decryption error</string>
    <string name="file_decrypted">File decrypted</string>
    <string name="choose_key_file">Choose key file</string>
    <string name="file_not_selected">File not selected</string>
    <string name="key_generation_error">Key generation error</string>
    <string name="ask_generate_new_keys">Do you want to generate new keys?</string>
    <string name="keys_already_generated">Keys have been already generated</string>
    <string name="choose_privkey">Choose .privkey file, not .pubkey</string>
    <string name="choose_pubkey">Choose .pubkey file, not .privkey</string>
    <string name="hashing_error">Hashing error</string>
    <string name="copy">Copy to clipboard</string>
    <string name="hash_copied">Hash sum copied to clipboard</string>
    <string name="calculate_hash_first">Calculate hash first</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="cloud_features">Cloud Features</string>
    <string name="not_logged_in">Not Logged in</string>
    <string name="cryptonite_cloud_features">CRYPTONITE Cloud Features</string>
    <string name="login_or_register">Login or register</string>
    <string name="log_out">Log out</string>
    <string name="enter_email">Enter email</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="account_created">Account created</string>
    <string name="already_logged_in">You are already logged in</string>
    <string name="login_successful">Successful login</string>
    <string name="download">Download</string>
    <string name="upload">Upload to cloud</string>
    <string name="not_authorized">You are not authorized</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="file_upload_failed">File upload failed</string>
    <string name="file_uploaded_successfully">File uploaded successfully</string>
    <string name="have_not_up_uploaded_any_files_yet">You haven\'t uploaded any files yet</string>
    <string name="delete_from_cloud">Delete from Cloud</string>
    <string name="delete">Delete</string>
    <string name="upload_file_to_cloud">Upload file to cloud</string>
    <string name="email_not_verified">Email is not verified</string>
    <string name="email_verification_sent_failed">Email verification sent failed</string>
    <string name="email_verification_sent_success">Email verification sent successfully</string>
    <string name="cryptonite_cloud_features_account_manage">CRYPTONITE Cloud Features Account Manage</string>
    <string name="manage_account">Manage account</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="delete_account_and_all_data">Delete account and all data</string>
    <string name="change_email_example" translatable="false">new_email@gmail.com</string>
    <string name="successfully_changed_email">Successfully changed email</string>
    <string name="email_changing_failed">Email changing failed</string>
    <string name="new_email">New email</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="successfully_changed_password">Successfully changed password</string>
    <string name="password_change_failed">Password change failed</string>
    <string name="delete_all_data_from_cloud">Delete all data from cloud</string>
    <string name="password_for_deleting">Password for deleting</string>
    <string name="successfully_deleted_all_files_from_cloud">Successfully deleted all files from cloud</string>
    <string name="failed_deleting_all_files_from_cloud">Failed deleting all files from cloud</string>
    <string name="successfully_deleted_account">Successfully deleted account</string>
    <string name="failed_deleting_account">Failed deleting account</string>
    <string name="cryptonite_password_safety_check">CRYPTONITE Password Safety Check</string>
    <string name="result">Result:</string>
    <string name="check_password_safety">Check password safety</string>
    <string name="your_password_is_secure">Your password is secure. You can safely use it.</string>
    <string name="password_safety_check">Password safety check</string>
    <string name="your_password_is_too_short">Your password is too short.</string>
    <string name="your_password_does_not_contain_numeric_characters">Your password does not contain numeric characters.</string>
    <string name="your_password_does_not_contain_lowercase_characters">Your password does not contain lowercase characters.</string>
    <string name="your_password_does_not_contain_uppercase_characters">Your password does not contain uppercase characters.</string>
    <string name="your_password_does_not_contain_special_symbols">Your password does not contain special symbols (_!@#$%).</string>
    <string name="your_password_in_rockyou_passwords">Your password is in rockyou passwords list. This means that it can be easily hacked via password list attack.</string>
    <string name="your_password_in_rockyou_toast">Your password is in rockyou password list so it\'s insecure. Press again to continue with this password.</string>
    <string name="settings">Settings</string>
    <string name="cryptonite_settings">CRYPTONITE Settings</string>
    <string name="english" translatable="false">English</string>
    <string name="chinese_simplified" translatable="false">Chinese (simplified)</string>
    <string name="french" translatable="false">French</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesian" translatable="false">Indonesian</string>
    <string name="korean" translatable="false">Korean</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="russian" translatable="false">Russian</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="change_language" translatable="false">Change language</string>
    <string name="in_development">In development…</string>
</resources>