<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/choose_algorithm"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <Button
            android:id="@+id/aes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/button"
            android:text="@string/aes"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/rsa_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/rsa"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/blowfish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/blowfish"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/twofish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/twofish"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/triple_des_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/des3"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/des_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/des"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/gost_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/GOST_28147_89"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/rc4_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button"
            android:text="@string/rc4"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

</ScrollView>