<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SelectLanguageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/english"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/chinese_simplified"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/french"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/german"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/german"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/hindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/hindi"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/indonesian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/indonesian"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/korean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/korean"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/portuguese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/portuguese"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/russian"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button"
            android:text="@string/spanish"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>
</ScrollView>