<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:background="@color/background"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="55dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/choose_hash_algorithm"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <Button
                android:id="@+id/sha512_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/button"
                android:text="@string/sha512"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sha384_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/sha384"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sha256_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/sha256"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sha224_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/sha224"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sha1_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/sha1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/md5_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/md5"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/whirlpool_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/whirlpool"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/gost3411_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/gost3411"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/ripemd160_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/ripemd160"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/keccak512_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/keccak512"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/keccak384_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/keccak384"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/keccak256_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/keccak256"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/keccak224_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/keccak224"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/blake512_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/blake512"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/blake384_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/blake384"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/blake256_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/blake256"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/blake224_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/blake224"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/blake160_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/blake160"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/blake128_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/blake128"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>