<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="15dp"
    tools:context=".AccountManageActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/cryptonite_cloud_features_account_manage"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button"
            android:text="@string/change_email"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/button"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/delete_all_data_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/delete_all_data_from_cloud"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/delete_account_and_all_data"
            android:textColor="@color/white"
            android:textSize="17.5sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/button_color_middle"
            android:hint="@string/password_for_deleting"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/not_logged_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

</RelativeLayout>